website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.3.2/guides/markdown-features/markdown-features-code-blocks.mdx
---
id: code-blocks
description: Handling code blocks in Docusaurus Markdown
slug: /markdown-features/code-blocks
---

# 程式碼區塊

import BrowserWindow from '@site/src/components/BrowserWindow';
import CodeBlock from '@theme/CodeBlock';

文件中的程式碼區塊擁有強化功能 💪。

## 程式碼標題 {#code-title}

您可以在語言標籤後方添加 `title` 鍵值來為程式碼區塊添加標題（需在語言與標題之間保留空格）。

````md
```jsx title="/src/components/HelloCodeTitle.js"
function HelloCodeTitle(props) {
  return <h1>Hello, {props.name}</h1>;
}
```
````

```mdx-code-block
<BrowserWindow>
```

```jsx title="/src/components/HelloCodeTitle.js"
function HelloCodeTitle(props) {
  return <h1>Hello, {props.name}</h1>;
}
```

```mdx-code-block
</BrowserWindow>
```

## 語法高亮 {#syntax-highlighting}

程式碼區塊是由三個反引號包裹的文字區塊。您可查閱 [MDX 規範](https://github.com/mdx-js/specification)了解詳細標準。

````md
```js
console.log('Every repo must come with a mascot.');
```
````

為程式碼區塊使用對應的語言元字串，Docusaurus 將自動啟用語法高亮功能，該功能由 [Prism React Renderer](https://github.com/FormidableLabs/prism-react-renderer) 提供支援。

<BrowserWindow>

```js
console.log('Every repo must come with a mascot.');
```

</BrowserWindow>

### 主題設定 {#theming}

預設情況下，我們使用的 Prism [語法高亮主題](https://github.com/FormidableLabs/prism-react-renderer#theming)是 [Palenight](https://github.com/FormidableLabs/prism-react-renderer/blob/master/packages/prism-react-renderer/src/themes/palenight.ts)。您可透過在 docusaurus.config.js 的 `themeConfig` 中傳遞 `prism` 的 `theme` 欄位來切換其他主題。

例如，若您偏好使用 `dracula` 高亮主題：

```js title="docusaurus.config.js"
import {themes as prismThemes} from 'prism-react-renderer';

export default {
  themeConfig: {
    prism: {
      // highlight-next-line
      theme: prismThemes.dracula,
    },
  },
};
```

由於 Prism 主題本質上是 JS 物件，若不滿意預設主題，您也可以編寫自訂主題。Docusaurus 增強了 `github` 和 `vsDark` 主題以提供更豐富的高亮效果，您可參考我們對 [淺色](https://github.com/facebook/docusaurus/blob/main/website/src/utils/prismLight.ts) 與 [深色](https://github.com/facebook/docusaurus/blob/main/website/src/utils/prismDark.ts) 程式碼區塊主題的實作。

### 支援語言 {#supported-languages}

Docusaurus 預設內建一組 [常用語言](https://github.com/FormidableLabs/prism-react-renderer/blob/master/packages/generate-prism-languages/index.ts#L9-L23)。

:::warning

部分熱門語言如 Java、C# 或 PHP 預設未啟用。

:::

若要為其他 [Prism 支援語言](https://prismjs.com/#supported-languages) 添加語法高亮，請在額外語言陣列中定義。

:::note

每個新增語言必須是有效的 Prism 元件名稱。例如 Prism 會將語言標籤 `cs` 映射至 `csharp`，但只有 `prism-csharp.js` 作為 _元件_ 存在，因此需使用 `additionalLanguages: ['csharp']`。您可查閱 `node_modules/prismjs/components` 目錄了解所有可用元件（語言）。

:::

例如，若要為 PowerShell 語言添加高亮支援：

```js title="docusaurus.config.js"
export default {
  // ...
  themeConfig: {
    prism: {
      // highlight-next-line
      additionalLanguages: ['powershell'],
    },
    // ...
  },
};
```

新增 `additionalLanguages` 後，請重啟 Docusaurus。

若要為 Prism 尚未支援的語言添加高亮，可替換 `prism-include-languages` 元件：

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic prism-include-languages
```

此操作將在您的 `src/theme` 資料夾生成 `prism-include-languages.js` 檔案。透過編輯此檔案可為自訂語言添加高亮支援：

```js title="src/theme/prism-include-languages.js"
const prismIncludeLanguages = (Prism) => {
  // ...

  additionalLanguages.forEach((lang) => {
    require(`prismjs/components/prism-${lang}`);
  });

  // highlight-next-line
  require('/path/to/your/prism-language-definition');

  // ...
};
```

編寫自訂語言定義時，可參考 [Prism 官方語言定義](https://github.com/PrismJS/prism/tree/master/components)。

當添加自訂語言定義時，您無需將該語言加入 `additionalLanguages` 配置陣列，因為 Docusaurus 僅會在 Prism 提供的語言中查找 `additionalLanguages` 字串。在 `prism-include-languages.js` 中導入語言已足夠。

## 行高亮 {#line-highlighting}

### 使用註解高亮 {#highlighting-with-comments}

您可以使用帶有 `highlight-next-line`、`highlight-start` 和 `highlight-end` 的註解來選擇要高亮的行。

````md
```js
function HighlightSomeText(highlight) {
  if (highlight) {
    // highlight-next-line
    return 'This text is highlighted!';
  }

  return 'Nothing highlighted';
}

function HighlightMoreText(highlight) {
  // highlight-start
  if (highlight) {
    return 'This range is highlighted!';
  }
  // highlight-end

  return 'Nothing highlighted';
}
```
````

```mdx-code-block
<BrowserWindow>
```

```js
function HighlightSomeText(highlight) {
  if (highlight) {
    // highlight-next-line
    return 'This text is highlighted!';
  }

  return 'Nothing highlighted';
}

function HighlightMoreText(highlight) {
  // highlight-start
  if (highlight) {
    return 'This range is highlighted!';
  }
  // highlight-end

  return 'Nothing highlighted';
}
```

```mdx-code-block
</BrowserWindow>
```

支援的註解語法：

| Style      | Syntax                   |
| ---------- | ------------------------ |
| C-style    | `/* ... */` and `// ...` |
| JSX-style  | `{/* ... */}`            |
| Bash-style | `# ...`                  |
| HTML-style | `<!-- ... -->`           |

我們會盡力根據語言推斷應使用哪組註解樣式，並預設允許所有註解樣式。如果有目前不支援的註解樣式，我們樂於添加它們！歡迎提交 Pull Request。請注意，不同的註解樣式沒有語意差異，只有其內容有差異。

您可以在 `src/css/custom.css` 中為高亮的程式碼行設置自己的背景顏色，以更好地適應您選擇的語法高亮主題。下面給出的顏色適用於預設的高亮主題（Palenight），因此如果您使用其他主題，則需要相應調整顏色。

```css title="/src/css/custom.css"
:root {
  --docusaurus-highlighted-code-line-bg: rgb(72, 77, 91);
}

/* If you have a different syntax highlighting theme for dark mode. */
[data-theme='dark'] {
  /* Color which works with dark mode syntax highlighting theme */
  --docusaurus-highlighted-code-line-bg: rgb(100, 100, 100);
}
```

如果您還需要以其他方式樣式化高亮的程式碼行，可以針對 `theme-code-block-highlighted-line` CSS 類別進行設定。

### 使用元數據字串高亮 {#highlighting-with-metadata-string}

您也可以在語言元數據字串中指定要高亮的行範圍（在語言後留一個空格）。要高亮多行，可以用逗號分隔行號，或使用範圍語法選擇一塊行。此功能使用 `parse-number-range` 庫，您可以在其[專案詳情](https://www.npmjs.com/package/parse-numeric-range)中找到更多語法。

````md
```jsx {1,4-6,11}
import React from 'react';

function MyComponent(props) {
  if (props.isBar) {
    return <div>Bar</div>;
  }

  return <div>Foo</div>;
}

export default MyComponent;
```
````

```mdx-code-block
<BrowserWindow>
```

```jsx {1,4-6,11}
import React from 'react';

function MyComponent(props) {
  if (props.isBar) {
    return <div>Bar</div>;
  }

  return <div>Foo</div>;
}

export default MyComponent;
```

```mdx-code-block
</BrowserWindow>
```

:::tip[偏好註解]

盡可能使用註解進行高亮。通過在程式碼中內聯高亮，當程式碼塊變長時，您無需手動計算行數。如果您添加/刪除行，也無需偏移行範圍。

````diff
- ```jsx {3}
+ ```jsx {4}
  function HighlightSomeText(highlight) {
    if (highlight) {
+     console.log('找到高亮文字');
      return '這段文字被高亮了！';
    }

    return '沒有高亮';
  }
  ```
````

下面，我們將介紹如何擴展魔法註解系統以定義自訂指令及其功能。僅當不存在高亮元數據字串時，才會解析魔法註解。

:::

### 自訂魔法註解 {#custom-magic-comments}

`// highlight-next-line` 和 `// highlight-start` 等被稱為「魔法註解」，因為它們會被解析並移除，其目的是為下一行或由開始和結束註解對包圍的區段添加元數據。

您可以通過主題配置聲明自訂魔法註解。例如，您可以註冊另一個魔法註解，添加 `code-block-error-line` 類別名稱：

```mdx-code-block
<Tabs>
<TabItem value="docusaurus.config.js">
```

```js
export default {
  themeConfig: {
    prism: {
      magicComments: [
        // Remember to extend the default highlight class name as well!
        {
          className: 'theme-code-block-highlighted-line',
          line: 'highlight-next-line',
          block: {start: 'highlight-start', end: 'highlight-end'},
        },
        // highlight-start
        {
          className: 'code-block-error-line',
          line: 'This will error',
        },
        // highlight-end
      ],
    },
  },
};
```

```mdx-code-block
</TabItem>
<TabItem value="src/css/custom.css">
```

```css
.code-block-error-line {
  background-color: #ff000020;
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
  border-left: 3px solid #ff000080;
}
```

```mdx-code-block
</TabItem>
<TabItem value="myDoc.md">
```

````md
In JavaScript, trying to access properties on `null` will error.

```js
const name = null;
// This will error
console.log(name.toUpperCase());
// Uncaught TypeError: Cannot read properties of null (reading 'toUpperCase')
```
````

```mdx-code-block
</TabItem>
</Tabs>
```

```mdx-code-block
<BrowserWindow>
```

在 JavaScript 中，嘗試訪問 `null` 的屬性會出錯。

```js
const name = null;
// This will error
console.log(name.toUpperCase());
// Uncaught TypeError: Cannot read properties of null (reading 'toUpperCase')
```

```mdx-code-block
</BrowserWindow>
```

若在元字串中使用數字範圍語法（如 `{1,3-4}`），Docusaurus 會套用 **第一個 `magicComments` 條目**的類別名稱。預設情況下為 `theme-code-block-highlighted-line`，但若您變更 `magicComments` 配置並使用不同條目作為第一個項目，元字串範圍的意義也會隨之改變。

您可透過設定 `magicComments: []` 來停用預設的行高亮註解。若無任何魔法註解配置，但 Docusaurus 遇到包含元字串範圍的程式碼區塊時，將會報錯——因為此時沒有任何類別名稱可供套用（畢竟高亮類別名稱本質上就是一個魔法註解條目）。

每個魔法註解條目需包含三個鍵值：必填的 `className`、適用於下一行的 `line`，或是包含 `start` 與 `end` 的 `block`（用於標註被兩個註解包圍的整個區塊）。

透過 CSS 鎖定類別已能實現許多效果，但您可透過 [swizzling](../../swizzling.mdx) 進一步釋放此功能的完整潛力。

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic CodeBlock/Line
```

`Line` 元件會接收類別名稱列表，您可據此條件式渲染不同標記。

## 行號顯示 {#line-numbering}

您可在語言元字串中加入 `showLineNumbers` 鍵值來啟用程式碼區塊的行號功能（注意需在鍵值前保留空格）。

````md
```jsx {1,4-6,11} showLineNumbers
import React from 'react';

function MyComponent(props) {
  if (props.isBar) {
    return <div>Bar</div>;
  }

  return <div>Foo</div>;
}

export default MyComponent;
```
````

```mdx-code-block
<BrowserWindow>
```

```jsx {1,4-6,11} showLineNumbers
import React from 'react';

function MyComponent(props) {
  if (props.isBar) {
    return <div>Bar</div>;
  }

  return <div>Foo</div>;
}

export default MyComponent;
```

```mdx-code-block
</BrowserWindow>
```

## 互動式程式碼編輯器 {#interactive-code-editor}

（由 [React Live](https://github.com/FormidableLabs/react-live) 驅動）

您可透過 `@docusaurus/theme-live-codeblock` 插件建立互動式程式碼編輯器。請先將插件加入專案。

```bash npm2yarn
npm install --save @docusaurus/theme-live-codeblock
```

同時需在 `docusaurus.config.js` 中註冊插件。

```js {3}
export default {
  // ...
  themes: ['@docusaurus/theme-live-codeblock'],
  // ...
};
```

使用時，請在語言元字串後附加 `live` 來建立程式碼區塊。

````md
```jsx live
function Clock(props) {
  const [date, setDate] = useState(new Date());
  useEffect(() => {
    const timerID = setInterval(() => tick(), 1000);

    return function cleanup() {
      clearInterval(timerID);
    };
  });

  function tick() {
    setDate(new Date());
  }

  return (
    <div>
      <h2>It is {date.toLocaleTimeString()}.</h2>
    </div>
  );
}
```
````

該程式碼區塊將被渲染為互動式編輯器，程式碼變更會即時反映在結果面板上。

```mdx-code-block
<BrowserWindow>
```

```jsx live
function Clock(props) {
  const [date, setDate] = useState(new Date());
  useEffect(() => {
    const timerID = setInterval(() => tick(), 1000);

    return function cleanup() {
      clearInterval(timerID);
    };
  });

  function tick() {
    setDate(new Date());
  }

  return (
    <div>
      <h2>It is {date.toLocaleTimeString()}.</h2>
    </div>
  );
}
```

```mdx-code-block
</BrowserWindow>
```

### 匯入模組 {#imports}

:::warning[react-live 與模組匯入]

無法直接從 react-live 程式碼編輯器匯入元件，必須預先定義可用的匯入項目。

:::

預設情況下所有 React 匯入皆可用。若需增加可用模組，請透過 swizzle 設定 react-live 作用域：

```bash npm2yarn
npm run swizzle @docusaurus/theme-live-codeblock ReactLiveScope -- --eject
```

```jsx title="src/theme/ReactLiveScope/index.js"
import React from 'react';

// highlight-start
const ButtonExample = (props) => (
  <button
    {...props}
    style={{
      backgroundColor: 'white',
      color: 'black',
      border: 'solid red',
      borderRadius: 20,
      padding: 10,
      cursor: 'pointer',
      ...props.style,
    }}
  />
);
// highlight-end

// Add react-live imports you need here
const ReactLiveScope = {
  React,
  ...React,
  // highlight-next-line
  ButtonExample,
};

export default ReactLiveScope;
```

此時 `ButtonExample` 元件即可供使用：

```mdx-code-block
<BrowserWindow>
```

```jsx live
function MyPlayground(props) {
  return (
    <div>
      <ButtonExample onClick={() => alert('hey!')}>Click me</ButtonExample>
    </div>
  );
}
```

```mdx-code-block
</BrowserWindow>
```

### 命令式渲染 (noInline)

當程式碼跨越多個元件或變數時，應使用 `noInline` 選項以避免錯誤。

````md
```jsx live noInline
const project = 'Docusaurus';

const Greeting = () => <p>Hello {project}!</p>;

render(<Greeting />);
```
````

與一般互動式程式碼區塊不同，使用 `noInline` 時 React Live 不會將程式碼包裹在行內函數中渲染。

您需在程式碼結尾明確呼叫 `render()` 來顯示輸出結果。

````mdx-code-block
<BrowserWindow>

```jsx live noInline
const project = "Docusaurus";

const Greeting = () => (
  <p>Hello {project}!</p>
);

render(
  <Greeting />
);
```

</BrowserWindow>
````

## 在程式碼區塊中使用 JSX 標記 {#using-jsx-markup}

Markdown 中的程式碼區塊始終將其內容保留為純文字，意味著您無法實現如下操作：

```ts
type EditUrlFunction = (params: {
  // This doesn't turn into a link (for good reason!)
  version: <a href="/docs/versioning">Version</a>;
  versionDocsDirPath: string;
  docPath: string;
  permalink: string;
  locale: string;
}) => string | undefined;
```

若想嵌入HTML標記如錨點連結或粗體文字，可使用`<pre>`標籤、`<code>`標籤或`<CodeBlock>`元件。

```jsx
<pre>
  <b>Input: </b>1 2 3 4{'\n'}
  <b>Output: </b>"366300745"{'\n'}
</pre>
```

<BrowserWindow>
  <pre>
    <b>{'Input: '}</b>
    {'1 2 3 4\n'}
    <b>{'Output: '}</b>
    {'"366300745"\n'}
  </pre>
</BrowserWindow>

:::warning[MDX對空白字元不敏感]

MDX遵循JSX行為規範：換行字元即便位於`<pre>`內也會被轉為空格。必須明確寫入換行符號才能實際輸出。

:::

:::warning

語法突顯僅作用於純文字字串。Docusaurus不會嘗試解析含有JSX子元素的程式碼區塊內容。

:::

## 多語言支援程式碼區塊 {#multi-language-support-code-blocks}

透過MDX，您可輕鬆在文件中建立互動式元件，例如使用標籤頁元件來展示多種程式語言程式碼並進行切換。

我們並未實作專用的多語言程式碼區塊元件，而是在經典主題中實現了通用型[`<Tabs>`](./markdown-features-tabs.mdx)元件，使其也能應用於非程式碼情境。

以下範例展示如何在文件中實現多語言程式碼標籤頁。請注意各語言區塊上下方的空行是**刻意保留**的，這是[MDX解析器的當前限制](./markdown-features-react.mdx#markdown-and-jsx-interoperability)：必須在Markdown語法周圍留空行，才能讓MDX解析器辨識其為Markdown語法而非JSX。

````jsx
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<Tabs>
<TabItem value="js" label="JavaScript">

```js
function helloWorld() {
  console.log('Hello, world!');
}
```

</TabItem>
<TabItem value="py" label="Python">

```py
def hello_world():
  print("Hello, world!")
```

</TabItem>
<TabItem value="java" label="Java">

```java
class HelloWorld {
  public static void main(String args[]) {
    System.out.println("Hello, World");
  }
}
```

</TabItem>
</Tabs>
````

最終呈現效果如下：

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="js" label="JavaScript">
```

```js
function helloWorld() {
  console.log('Hello, world!');
}
```

```mdx-code-block
</TabItem>
<TabItem value="py" label="Python">
```

```py
def hello_world():
  print("Hello, world!")
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
class HelloWorld {
  public static void main(String args[]) {
    System.out.println("Hello, World");
  }
}
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```

若有多個多語言程式碼標籤頁需同步選項，請參閱[同步標籤選擇章節](markdown-features-tabs.mdx#syncing-tab-choices)。

### Docusaurus npm2yarn備註外掛 {#npm2yarn-remark-plugin}

同時顯示npm與Yarn的CLI指令是常見需求，例如：

```bash npm2yarn
npm install @docusaurus/remark-plugin-npm2yarn
```

Docusaurus內建此功能，免去每次使用`Tabs`元件的麻煩。啟用前請先安裝`@docusaurus/remark-plugin-npm2yarn`套件，並於`docusaurus.config.js`中，在需要此功能的外掛(doc、blog、pages等)的`remarkPlugins`選項註冊。（詳見[文件設定](../../api/plugins/plugin-content-docs.mdx#ex-config)瞭解配置格式）

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-start
          remarkPlugins: [
            [require('@docusaurus/remark-plugin-npm2yarn'), {sync: true}],
          ],
          // highlight-end
        },
        pages: {
          // highlight-next-line
          remarkPlugins: [require('@docusaurus/remark-plugin-npm2yarn')],
        },
        blog: {
          // highlight-start
          remarkPlugins: [
            [
              require('@docusaurus/remark-plugin-npm2yarn'),
              {converters: ['pnpm']},
            ],
          ],
          // highlight-end
          // ...
        },
      },
    ],
  ],
};
```

使用時只需在程式碼區塊加入`npm2yarn`鍵值：

````md
```bash npm2yarn
npm install @docusaurus/remark-plugin-npm2yarn
```
````

#### 配置選項 {#npm2yarn-remark-plugin-configuration}

| Option | Type | Default | Description |
| --- | --- | --- | --- |
| `sync` | `boolean` | `false` | Whether to sync the selected converter across all code blocks. |
| `converters` | `array` | `'yarn'`, `'pnpm'` | The list of converters to use. The order of the converters is important, as the first converter will be used as the default choice. |

## 在JSX中使用 {#usage-in-jsx}

在Markdown之外，可使用`@theme/CodeBlock`元件獲得相同輸出效果。

```jsx
import CodeBlock from '@theme/CodeBlock';

export default function MyReactPage() {
  return (
    <div>
      {/* highlight-start */}
      <CodeBlock
        language="jsx"
        title="/src/components/HelloCodeTitle.js"
        showLineNumbers>
        {`function HelloCodeTitle(props) {
  return <h1>Hello, {props.name}</h1>;
}`}
      </CodeBlock>
      {/* highlight-end */}
    </div>
  );
}
```

```mdx-code-block
<BrowserWindow>
  <CodeBlock
    language="jsx"
    title="/src/components/HelloCodeTitle.js"
    showLineNumbers>
    {`function HelloCodeTitle(props) {
  return <h1>Hello, {props.name}</h1>;
}`}
  </CodeBlock>
</BrowserWindow>
```

接受的屬性包含`language`、`title`與`showLineNumbers`，與撰寫Markdown程式碼區塊的方式相同。

雖然不建議，但也可傳入`metastring`屬性如`metastring='{1-2} title="/src/components/HelloCodeTitle.js" showLineNumbers'`，此為Markdown程式碼區塊的底層處理方式。不過我們建議您[使用註解來突顯行號](#highlighting-with-comments)。

如[先前所述](#using-jsx-markup)，語法高亮僅在子元素為純文字字串時生效。